Importando Models para a solution

--- a/PegadaChave/PegadaChave.csproj
+++ b/PegadaChave/PegadaChave.csproj
@@ -127,6 +127,18 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Carrinho.cs" />
+    <Compile Include="Models\CarrinhoProduto.cs" />
+    <Compile Include="Models\Cliente.cs" />
+    <Compile Include="Models\Endereco.cs" />
+    <Compile Include="Models\Funcionario.cs" />
+    <Compile Include="Models\ItemPedido.cs" />
+    <Compile Include="Models\Look.cs" />
+    <Compile Include="Models\LookProduto.cs" />
+    <Compile Include="Models\Pagamento.cs" />
+    <Compile Include="Models\Pedido.cs" />
+    <Compile Include="Models\Produto.cs" />
+    <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -195,7 +207,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Cadastro\" />
     <Folder Include="Views\ProductDetail\" />
   </ItemGroup>
