--- a/PegadaChave/Web.config
+++ b/PegadaChave/Web.config
@@ -4,10 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <connectionStrings>
-    <add name="MySqlConnection" connectionString="Server=localhost;port:3306;Database=bdBillyDuke;User Id=root;Password=12345678;" providerName="MySql.Data.MySqlClient" />
-  </connectionStrings>
-  <appSettings>
+	<connectionStrings>
+		<add name="MySqlConnection" connectionString="Server=localhost;Port=3306;Database=bdBillyDuke;User Id=root;Password=12345678;" providerName="MySql.Data.MySqlClient" />
+	</connectionStrings>
+	<appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -154,6 +154,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.25.0.0" newVersion="3.25.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ZstdSharp" publicKeyToken="8d151af33a4ad5cf" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.7.3.0" newVersion="0.7.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="K4os.Compression.LZ4.Streams" publicKeyToken="2186fa9121ef231d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.6.0" newVersion="1.3.6.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
