--- a/PegadaChave/PegadaChave.csproj
+++ b/PegadaChave/PegadaChave.csproj
@@ -225,6 +225,62 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\BlusaPumaBranca.jpg" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\CamisaPoloHalphy.jpg" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\CamisaPreta.jpg" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\ConjuntoRoupasNike.jpg" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\Favela.jpg" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\ICON BD BLK.png" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\ICON BD WT.png" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\Logo branca Billy Duke.png" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\Logo preta Billy Duke.png" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\TenisNikeBrancoAzulVermelho.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\BlazerRosaBalmain.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\BlusacroppedRosaLacoste.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\BlusapelugemBrancaPrada.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\BlusinhaBrancaPrada.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\CalcaPretaCarolinaherrera.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\CamisaAzulAdidas.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\CamisagolaaltaBrancaPrada.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\CamisaPretaSaintlaurent.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\CroppedGolaAltaPrada.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\CroppedPretoGucci.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\CroppedVermelhoGucci.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\JaquetaBrancaAdidas.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\JaquetaestufadaBrancaGucci.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\JaquetaJeansCarolinaherrera.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\JaquetaRosaAdidas.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\JeansLouisvuitton.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\MoletomRosaArmani.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\SaiaxadrezLouisvuitton.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\TenisFila.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\TopPretoPrada.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\TopTommyhilfiger.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\TopVerdeAdidas.jpg" />
+    <Content Include="Content\Image\ImagemProdutoFeminino\VestidocouroVermelhoCarolinaherrera.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\BlusaLaranjaNike.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\BlusaPretaLouisvuitton.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CamisaAmarelaNike.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CamisaCinzaTommyhillfiger.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CamisaGucci.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CamisapoloAzulDudalina.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CamisapoloAzulLacoste.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CamisaPretaPrada.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CasacoVermelhoNike.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CortaventoBrancoNike.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CortaventoNike.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\CortaventoVerdeLouisvuitton.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\JaquetaBomberAdidas.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\JaquetajeansArmani.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\JaquetajeansPrada.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\JaquetaVermelhaNike.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\JaquetaxadrezAzulAdidas.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\MoletomBrancoBurberry.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\MoletomMarromLouisvuitton.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\MoletomPretoPrada.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\SlipperSupreme.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\SueterAzulAdidas.jpg" />
+    <Content Include="Content\Image\ImagemProdutoMasculino\SueterVermelhoAdidas.jpg" />
     <Content Include="Content\Image\Test\Gucci-Tshirt.jpg" />
     <Content Include="Content\LoginStyle.css" />
     <Content Include="Content\FooterStyle.css" />
@@ -234,6 +290,7 @@
     <Content Include="Content\Image\Icons\lupa.png" />
     <Content Include="Content\Image\Icons\pessoa.png" />
     <Content Include="Content\ProductStyle.css" />
+    <Content Include="Content\HomeStyle.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
