--- a/PegadaChave/PegadaChave.csproj
+++ b/PegadaChave/PegadaChave.csproj
@@ -227,14 +227,20 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\BlusaPumaBranca.jpg" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\bolsa.png" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\CamisaPoloHalphy.jpg" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\CamisaPreta.jpg" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\ConjuntoRoupasNike.jpg" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\coracao.png" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\Favela.jpg" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\ICON BD BLK.png" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\ICON BD WT.png" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\Logo branca Billy Duke.png" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\Logo preta Billy Duke.png" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\logo.png" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\logoextenso.png" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\lupa.png" />
+    <Content Include="Content\Image\ImagemAuxiliarProjeto\pessoa.png" />
     <Content Include="Content\Image\ImagemAuxiliarProjeto\TenisNikeBrancoAzulVermelho.jpg" />
     <Content Include="Content\Image\ImagemProdutoFeminino\BlazerRosaBalmain.jpg" />
     <Content Include="Content\Image\ImagemProdutoFeminino\BlusacroppedRosaLacoste.jpg" />
