--- a/PegadaChave/packages.config
+++ b/PegadaChave/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="5.3.2" targetFramework="net472" />
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.25.0" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.25.1" targetFramework="net472" />
   <package id="jQuery" version="3.7.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.3.7-beta" targetFramework="net472" />
@@ -13,7 +13,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0-rc.2.23479.6" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
@@ -21,14 +21,14 @@
   <package id="MySql.Data" version="8.2.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Configuration.ConfigurationManager" version="8.0.0-rc.2.23479.6" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0-rc.2.23479.6" targetFramework="net472" />
-  <package id="System.IO.Pipelines" version="8.0.0-rc.2.23479.6" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="8.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
-  <package id="System.Security.Permissions" version="8.0.0-rc.2.23479.6" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="8.0.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
